--- a/SceytChatUiKit/src/main/res/layout/sceyt_dialog_channel_actions.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_dialog_channel_actions.xml
@@ -121,7 +121,7 @@
         android:paddingHorizontal="23dp"
         android:paddingVertical="10dp"
         android:text="@string/sceyt_leave"
-        android:textColor="@color/sceyt_color_error"
+        android:textColor="@color/sceyt_color_warning"
         android:textSize="@dimen/_12ssp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />
@@ -138,7 +138,7 @@
         android:paddingHorizontal="23dp"
         android:paddingVertical="10dp"
         android:text="@string/sceyt_delete"
-        android:textColor="@color/sceyt_color_error"
+        android:textColor="@color/sceyt_color_warning"
         android:textSize="@dimen/_12ssp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />
