--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_edit_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_edit_channel.xml
@@ -144,7 +144,7 @@
                 android:layout_marginHorizontal="8dp"
                 android:layout_marginTop="10dp"
                 android:inputType="textUri"
-                android:textColor="@color/sceyt_color_error"
+                android:textColor="@color/sceyt_color_warning"
                 android:textSize="13sp"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
