--- a/SceytChatUiKit/src/main/res/layout/sceyt_activity_select_users.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_activity_select_users.xml
@@ -37,7 +37,7 @@
         android:gravity="center"
         android:paddingVertical="4dp"
         android:textColor="@color/sceyt_color_text_secondary"
-        android:textSize="@dimen/_12sdp"
+        android:textSize="@dimen/mediumTextSize"
         app:layout_constraintStart_toStartOf="@+id/rvSelectedUsers"
         app:layout_constraintTop_toBottomOf="@+id/rvSelectedUsers"
         tools:text="@string/sceyt_users" />
