--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
@@ -316,6 +316,8 @@
         <attr name="sceytUiMessagesListSelectionCheckboxCheckedIcon" format="reference" />
         <attr name="sceytUiMessagesListSelectionCheckboxUncheckedIcon" format="reference" />
         <attr name="sceytUiMessagesListSelectionCheckboxPressedIcon" format="reference" />
+        <attr name="sceytUiMessagesListSelectionCheckboxButtonTint" format="color" />
+
 
         <!--Overlay Media loader style-->
         <attr name="sceytUiMessagesListOverlayMediaLoaderTrackColor" format="reference|color" />
