--- a/SceytChatUiKit/src/main/res/layout/sceyt_activity_share.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_activity_share.xml
@@ -56,7 +56,6 @@
         android:textColor="@color/sceyt_color_on_primary"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/messageInput"
-        tools:layout_editor_absoluteX="24dp" />
+        app:layout_constraintTop_toBottomOf="@+id/messageInput" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
