--- a/SceytChatUiKit/src/main/res/layout/sceyt_dialog_delete_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_dialog_delete_message.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp">
@@ -35,15 +36,15 @@
         android:id="@+id/checkbox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="-6dp"
         android:layout_marginTop="16dp"
         android:text="@string/sceyt_delete_for_all"
-        android:layout_marginStart="-6dp"
         android:textColor="@color/sceyt_color_text_secondary"
         android:textSize="@dimen/mediumTextSize"
-        app:buttonTint="@color/sceyt_checkbox_drawable_tint"
         app:layout_constraintEnd_toEndOf="@+id/textTitle"
         app:layout_constraintStart_toStartOf="@+id/textDescription"
-        app:layout_constraintTop_toBottomOf="@+id/textDescription" />
+        app:layout_constraintTop_toBottomOf="@+id/textDescription"
+        tools:buttonTint="@color/sceyt_checkbox_drawable_tint" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/buttonCancel"
