--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_option.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_option.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.AppCompatTextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/tvTitle"
+    android:id="@+id/btnOption"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?selectableItemBackground"
+    android:gravity="center_vertical"
     android:paddingHorizontal="18dp"
     android:paddingVertical="10dp"
+    android:textAllCaps="false"
     android:textColor="@color/sceyt_color_text_primary"
     android:textSize="@dimen/mediumTextSize"
     tools:text="title" />
