--- a/SceytChatUiKit/src/main/res/layout/sceyt_messages_list_header_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_messages_list_header_view.xml
@@ -58,7 +58,8 @@
                     app:layout_constraintDimensionRatio="1:1"
                     app:layout_constraintHeight_percent=".75"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:sceytUiAvatarColor="@color/sceyt_color_accent" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/title"
