--- a/examples/SceytDemoApp/src/main/res/layout/fragment_profile.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/fragment_profile.xml
@@ -56,8 +56,7 @@
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/title"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/title"
-                app:srcCompat="@drawable/sceyt_radio_button_checked_state" />
+                app:layout_constraintTop_toTopOf="@+id/title" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
