Add property enableBodyFormatting in MessageInputStyle

--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_message_input_view.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_message_input_view.xml
@@ -36,6 +36,7 @@
         <attr name="sceytUiMessageInputEnableVoiceRecord" format="boolean" />
         <attr name="sceytUiMessageInputEnableSendAttachment" format="boolean" />
         <attr name="sceytUiMessageInputEnableMention" format="boolean" />
+        <attr name="sceytUiMessageInputEnableBodyFormatting" format="boolean" />
 
         <attr name="sceytUiMessageInputSendIconBackgroundColor" format="reference|color" />
 
