--- a/examples/SceytDemoApp/src/main/res/values/styles.xml
+++ b/examples/SceytDemoApp/src/main/res/values/styles.xml
@@ -11,12 +11,17 @@
         <item name="windowActionModeOverlay">false</item>
         <item name="windowActionBar">false</item>
         <item name="android:windowBackground">@color/sceyt_color_background</item>
+        <item name="android:windowIsTranslucent">true</item>
         <item name="android:statusBarColor">@color/sceyt_color_status_bar</item>
         <item name="windowNoTitle">true</item>
     </style>
 
     <style name="DefaultFontTheme" parent="SceytAppTheme">
         <item name="android:fontFamily">@font/roboto_regular</item>
+    </style>
+
+    <style name="SplashTheme" parent="DefaultFontTheme">
+        <item name="android:windowBackground">@drawable/bg_splash</item>
     </style>
 
     <style name="My.TextInputLayout.FilledBox.Padding" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
