add new login flow

--- a/examples/SceytDemoApp/src/main/res/layout/activity_login.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/activity_login.xml
@@ -1,165 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/sceyt_color_primary"
+    android:gravity="center_horizontal"
+    tools:parentTag="com.google.android.material.appbar.AppBarLayout">
 
-    <data>
-
-        <variable
-            name="loading"
-            type="Boolean" />
-
-        <variable
-            name="enableConnect"
-            type="Boolean" />
-    </data>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".presentation.login.LoginActivity">
-
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias=".3">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingHorizontal="24dp">
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/login_title"
-                    android:textColor="@color/sceyt_color_text_primary"
-                    android:textSize="@dimen/superLargeTextSize"
-                    android:textStyle="bold"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/subTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="@string/login_subtitle"
-                    android:textColor="@color/sceyt_color_text_secondary"
-                    android:textSize="@dimen/mediumTextSize"
-                    app:layout_constraintTop_toBottomOf="@+id/title" />
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/userNameTextField"
-                    style="@style/My.TextInputLayout.FilledBox.Padding"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="35dp"
-                    android:background="@android:color/transparent"
-                    android:hint="@string/username"
-                    android:textColorHint="@color/sceyt_color_text_footnote"
-                    app:boxBackgroundColor="@android:color/transparent"
-                    app:boxCollapsedPaddingTop="5dp"
-                    app:boxStrokeColor="@color/sceyt_color_accent"
-                    app:endIconMode="custom"
-                    app:endIconTint="@color/sceyt_color_accent"
-                    app:errorEnabled="true"
-                    app:hintTextColor="@color/sceyt_color_accent"
-                    app:layout_constraintTop_toBottomOf="@id/subTitle"
-                    app:placeholderText="@string/enter_username"
-                    app:placeholderTextColor="@color/sceyt_color_text_footnote">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/userNameInput"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@android:color/transparent"
-                        android:imeOptions="actionNext"
-                        android:paddingStart="0dp"
-                        android:paddingEnd="0dp"
-                        android:singleLine="true"
-                        android:textColor="@color/sceyt_color_text_primary" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/displayNameTextField"
-                    style="@style/My.TextInputLayout.FilledBox.Padding"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:hint="@string/display_name"
-                    android:paddingStart="0dp"
-                    android:paddingEnd="-10dp"
-                    android:textColorHint="@color/sceyt_color_text_footnote"
-                    app:boxBackgroundColor="@android:color/transparent"
-                    app:boxCollapsedPaddingTop="5dp"
-                    app:boxStrokeColor="@color/sceyt_color_accent"
-                    app:endIconMode="custom"
-                    app:endIconTint="@color/sceyt_color_accent"
-                    app:errorEnabled="true"
-                    app:hintTextColor="@color/sceyt_color_accent"
-                    app:layout_constraintTop_toBottomOf="@id/userNameTextField"
-                    app:placeholderText="@string/enter_display_name"
-                    app:placeholderTextColor="@color/sceyt_color_text_footnote">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/displayNameInput"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@android:color/transparent"
-                        android:imeOptions="actionDone"
-                        android:inputType="textCapSentences"
-                        android:paddingStart="0dp"
-                        android:paddingEnd="0dp"
-                        android:singleLine="true"
-                        android:textColor="@color/sceyt_color_text_primary" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/submitButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:alpha="@{enableConnect? 1f : 0.5f}"
-                    android:background="@drawable/sceyt_bg_corners_6"
-                    android:enabled="@{enableConnect &amp; !loading}"
-                    android:text="@{loading ? null: @string/connect, default = @string/connect}"
-                    android:textColor="@color/sceyt_color_on_primary"
-                    android:textSize="@dimen/smallTextSize"
-                    app:layout_constraintTop_toBottomOf="@+id/displayNameTextField" />
-
-                <FrameLayout
-                    android:id="@+id/layoutLoading"
-                    visibleIf="@{loading}"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:padding="8dp"
-                    android:translationZ="4dp"
-                    android:visibility="gone"
-                    app:layout_constraintBottom_toBottomOf="@+id/submitButton"
-                    app:layout_constraintDimensionRatio="1:1"
-                    app:layout_constraintEnd_toEndOf="@+id/submitButton"
-                    app:layout_constraintStart_toStartOf="@+id/submitButton"
-                    app:layout_constraintTop_toTopOf="@+id/submitButton">
-
-                    <ProgressBar
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:theme="@style/SceytProgressBarWhite"
-                        app:layout_constraintBottom_toBottomOf="@+id/submitButton"
-                        app:layout_constraintEnd_toEndOf="@+id/submitButton"
-                        app:layout_constraintStart_toStartOf="@+id/submitButton"
-                        app:layout_constraintTop_toTopOf="@+id/submitButton" />
-
-                </FrameLayout>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </androidx.core.widget.NestedScrollView>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
+        android:layout_height="match_parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
