--- a/examples/SceytDemoApp/src/main/res/layout/fragment_create_account.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/fragment_create_account.xml
@@ -20,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/roboto_medium"
         android:singleLine="true"
         android:text="@string/create_account"
@@ -36,7 +37,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/roboto_medium"
         android:maxLines="2"
         android:text="@string/create_account_hint"
         android:textColor="@color/sceyt_color_text_secondary"
@@ -46,69 +46,82 @@
         tools:text="@string/create_account_hint" />
 
     <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/et_first_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/bg_underline"
+        android:hint="@string/first_name"
+        android:layoutDirection="ltr"
+        android:paddingVertical="15dp"
+        android:singleLine="true"
+        android:inputType="textPersonName"
+        android:textAlignment="viewStart"
+        android:textColor="@color/sceyt_color_text_primary"
+        android:textColorHint="@color/sceyt_color_text_footnote"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_create_account_hint" />
+
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/et_last_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:background="@drawable/bg_underline"
+        android:hint="@string/last_name"
+        android:layoutDirection="ltr"
+        android:paddingVertical="15dp"
+        android:inputType="textPersonName"
+        android:singleLine="true"
+        android:textAlignment="viewStart"
+        android:textColor="@color/sceyt_color_text_primary"
+        android:textColorHint="@color/sceyt_color_text_footnote"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_first_name"
+        tools:text="John" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/uriPrefix"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:background="@drawable/bg_underline"
+        android:layoutDirection="ltr"
+        android:paddingVertical="15dp"
+        android:text="\@"
+        android:textColor="@color/sceyt_color_text_primary"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/et_last_name"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_last_name"
+        tools:ignore="HardcodedText" />
+
+    <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/et_user_name"
         android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/bg_edit_text_small_bottom_padding"
-        android:backgroundTint="@color/sceyt_color_border"
-        android:ellipsize="end"
-        android:fontFamily="@font/roboto_medium"
-        android:hint="@string/display_name"
-        android:includeFontPadding="false"
-        android:inputType="textPersonName"
-        android:maxLines="1"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_underline"
+        android:hint="@string/user_name"
+        android:inputType="textUri"
+        android:layoutDirection="ltr"
+        android:paddingVertical="15dp"
+        android:singleLine="true"
+        android:textAlignment="viewStart"
         android:textColor="@color/sceyt_color_text_primary"
         android:textColorHint="@color/sceyt_color_text_footnote"
-        android:textSize="@dimen/mediumTextSize"
+        android:textSize="16sp"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintBottom_toBottomOf="@+id/uriPrefix"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_create_account_hint"
-        tools:text="John" />
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/et_user_surname"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/bg_edit_text_small_bottom_padding"
-        android:backgroundTint="@color/sceyt_color_border"
-        android:ellipsize="end"
-        android:fontFamily="@font/roboto_medium"
-        android:hint="@string/display_name"
-        android:includeFontPadding="false"
-        android:inputType="textPersonName"
-        android:maxLines="1"
-        android:textColor="@color/sceyt_color_text_primary"
-        android:textColorHint="@color/sceyt_color_text_footnote"
-        android:textSize="@dimen/mediumTextSize"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_user_name"
-        tools:text="John" />
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/et_user_nick_name"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/bg_edit_text_small_bottom_padding"
-        android:backgroundTint="@color/sceyt_color_border"
-        android:ellipsize="end"
-        android:fontFamily="@font/roboto_medium"
-        android:hint="@string/display_name"
-        android:includeFontPadding="false"
-        android:inputType="textPersonName"
-        android:maxLines="1"
-        android:textColor="@color/sceyt_color_text_primary"
-        android:textColorHint="@color/sceyt_color_text_footnote"
-        android:textSize="@dimen/mediumTextSize"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_user_surname"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toEndOf="@+id/uriPrefix"
+        app:layout_constraintTop_toTopOf="@+id/uriPrefix"
         tools:text="John" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -116,14 +129,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
-        android:fontFamily="@font/roboto_medium"
         android:paddingVertical="8dp"
         android:text="@string/error_username_taken"
         android:textColor="@color/sceyt_color_warning"
         android:textSize="@dimen/extraSmallTextSize"
         app:layout_constraintBottom_toTopOf="@id/tv_correct_input_hint"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_user_nick_name" />
+        app:layout_constraintTop_toBottomOf="@+id/et_user_name" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/error_username_barrier"
@@ -143,7 +155,6 @@
         android:text="@string/username_correct_input_hint"
         android:textColor="@color/sceyt_color_text_secondary"
         android:textSize="@dimen/extraSmallTextSize"
-
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/error_username_barrier" />
 
